# 5GMETA

./: .gitignore  .gitmodules  CODE_OF_CONDUCT  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
datasets/: README.md  cits-versailles_area-spat.json  nb_register_service_example.json
datasets/cits/json/: cits-versailles_area-cam.json
datasets/connectors/: jms-download-connector.json  jms-upload-connector.json  registry-shema.json
docs/concepts/: README.md
docs/deployment-options/: eks.md
docs/metering/: README.md
docs/testing/: README.md
docs/tutorials/: README.md  producing_events_guide.md  receiving_events_guide.md  stream-datagateway.md  stream-example.md  video-stream-broker.md
examples/: 5gmeta_platform.py  Dockerfile
src/py5gmeta/activemq/: amqp.py
src/py5gmeta/common/: address.py  api.py  content.py  database.py  geotile.py  helpers.py  identity.py  message.py  platform.py  schema.avsc
src/py5gmeta/kafka/: consumer.py  ksql.py  ksqlmeta.py  producer.py  prosumer.py
src/py5gmeta_akkodis/activemq/: amqp.py  consumer.py  receiver.py  sender.py
src/py5gmeta_akkodis/common/: address.py  api.py  client.py  config.py  content.py  content_folder.py  database.py  helpers.py  helpers_kafka.py  jms_connector.json  keycloak.py  tile.py
tests/: address.py  admin.py  amqp.py  api.py  authorization_key.py  client.py  clientrunning.py  consumer.py  database.py  geotile.py  identity.py  kafka.py  ksqltest.py  message.py  platform.py  receiver.py  sender.py  vehicle.py  video_sensor.py
tests/dataflow-api/: README.md  consumer.py
tests/datasets/: cits-versailles_area-pam.json
tests/discovery/: README.md  nb_delete_service.py  nb_get_service_details.py  nb_get_services_from_mec.py  sb_delete_mec.py  sb_delete_tile.py  sb_get_mec_list.py  sb_register_example.json  sb_register_mec.py
tests/mec-platform/: address.py  consumer.py  content.py  sender.py
tests/tests/: cits-kafka-consumer.py
tests/utils/: README.md
(+92 files in other folders)
